--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -172,3 +172,8 @@ ul li {
 .files {
   display: none;
 }
+.files img {
+}
+.change:hover{
+  cursor:pointer
+}
